# ingodb

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  PLAN.md  origin-story.dialogue-between-gemini-and-henrik.txt
blogs/: announcing-ingodb.md
crates/ingodb/: Cargo.toml
crates/ingodb-blob/: Cargo.toml
crates/ingodb-blob/src/: error.rs  iblob.rs  lib.rs  value.rs
crates/ingodb-lsm/: Cargo.toml
crates/ingodb-lsm/src/: compaction.rs  database.rs  lib.rs  secondary.rs  stats.rs
crates/ingodb-memtable/: Cargo.toml
crates/ingodb-memtable/src/: lib.rs
crates/ingodb-query/: Cargo.toml
crates/ingodb-query/src/: lib.rs
crates/ingodb-sstable/: Cargo.toml
crates/ingodb-sstable/src/: bloom.rs  error.rs  keys.rs  lib.rs  reader.rs  writer.rs
crates/ingodb-wal/: Cargo.toml
crates/ingodb-wal/src/: lib.rs
crates/ingodb/examples/: benchmark.rs
crates/ingodb/src/: lib.rs
crates/ingodb/tests/: integration_test.rs
docs/: README.md  adaptive.md  api.md  architecture.md  compaction.md  mvcc.md  philosophy.md  roadmap.md
