[package]
name = "ingodb-sstable"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ingodb-blob = { path = "../ingodb-blob" }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
